--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <header>
       <nav>
         <a href="./index.html"
-          ><img src="./images/logo.png" alt="logo" />Product</a
+          ><img src="./images/pictures/logo.png" alt="logo" />Product</a
         >
         <ul>
           <li><a href="./index.html">Product</a></li>
           <li><a href="./pricises.html">Pricing</a></li>
           <li><a href="./customers.html">Customers</a></li>
-          <li><a href="./index.html">Resources</a></li>
+          <li><a href="">Resources</a></li>
         </ul>
       </nav>
       <ul>
@@ -35,36 +35,265 @@
           <li><button type="button">Get started</button></li>
           <li><button type="button">Watch the Video</button></li>
         </ul>
-        <img src="./images/hero-img.png" alt="peoples" />
+        <img
+          src="./images/pictures/hero-img.png"
+          alt="peoples"
+          width="610"
+          height="555"
+        />
       </section>
+
+      <!-- section feature-->
       <section>
-        <h2></h2>
+        <h2>Product was Built Specifically for You</h2>
         <ul>
           <li>
-            <h3></h3>
-            <p></p>
+            <h3>First click tests</h3>
+            <p>While most people enjoy casino gambling,</p>
           </li>
           <li>
-            <h3></h3>
-            <p></p>
+            <h3>Design surveys</h3>
+            <p>Sports betting, lottery and bingo playing for the fun</p>
           </li>
           <li>
-            <h3></h3>
-            <p></p>
+            <h3>Preference tests</h3>
+            <p>The Myspace page defines the individual.</p>
           </li>
           <li>
-            <h3></h3>
-            <p></p>
+            <h3>Five second tests</h3>
+            <p>Personal choices and the overall personality of the person.</p>
           </li>
         </ul>
-        <button></button>
+        <button type="button">SIGN UP NOW</button>
       </section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
+
+      <!-- section Business management -->
+      <section>
+        <h2>Effortless Validation for Management</h2>
+        <p>
+          The Myspace page defines the individual, his or her characteristics,
+          traits, personal choices and the overall personality of the person.
+        </p>
+        <ul>
+          <li>
+            <h3>Accessory makers</h3>
+            <p>
+              While most people enjoy casino gambling, sports betting, lottery
+              and bingo playing for the fun
+            </p>
+          </li>
+          <li>
+            <h3>Alterationists</h3>
+            <p>
+              If you are looking for a new way to promote your business that
+              won’t cost you more money,
+            </p>
+          </li>
+        </ul>
+        <img
+          src="./images/pictures/management-img.png"
+          alt="folders and letters"
+          width="540"
+          height="500"
+        />
+      </section>
+
+      <!-- section Support -->
+      <section>
+        <img
+          src="./images/pictures/support-img.png"
+          alt="laptop"
+          width="540"
+          height="500"
+        />
+        <h2>Easier decision making for Customer Support</h2>
+        <p>
+          The Myspace page defines the individual, his or her characteristics,
+          traits, personal choices and the overall personality of the person.
+        </p>
+        <ul>
+          <li>
+            <p>Never worry about overpaying for your energy again.</p>
+          </li>
+          <li>
+            <p>
+              We will only switch you to energy companies that we trust and will
+              treat you right
+            </p>
+          </li>
+          <li>
+            <p>We track the markets daily and know where the savings are.</p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- section Collaboration -->
+      <section>
+        <h2>Optimisation for Collaborative</h2>
+        <p>
+          Few would argue that, despite the advancements of feminism over the
+          past three decades, women still face a double standard when it comes
+          to their behavior.
+        </p>
+        <ul>
+          <li>
+            <h3>Accessory makers</h3>
+            <p>
+              While most people enjoy casino gambling, sports betting, lottery
+              and bingo playing for the fun
+            </p>
+          </li>
+          <li>
+            <h3>Alterationists</h3>
+            <p>
+              If you are looking for a new way to promote your business that
+              won’t cost you more money,
+            </p>
+          </li>
+        </ul>
+        <img
+          src="./images/pictures/collaboration-img.png"
+          alt="folder with files"
+          width="540"
+          height="500"
+        />
+      </section>
+
+      <!-- section Collaboration -->
+      <section>
+        <h2>Quick & Easy Process</h2>
+        <p>
+          Do you require some help for your project: Conception workshop,
+          prototyping, marketing strategy, landing page, Ux/UI?
+        </p>
+        <ul>
+          <li>
+            <img
+              src="./images/avatars/avatar.png"
+              alt="avatar of girl"
+              width="98"
+              height="98"
+            />
+            <p>I can take care of your pitch</p>
+          </li>
+          <li>
+            <img
+              src="./images/avatars/avatar-1.png"
+              alt="avatar of women"
+              width="98"
+              height="98"
+            />
+            <p>I can prototype your app</p>
+          </li>
+          <li>
+            <img
+              src="./images/avatars/avatar-2.png"
+              alt="avatar of boy"
+              width="98"
+              height="98"
+            />
+            <p>I can take care of your pitch</p>
+          </li>
+          <li>
+            <img
+              src="./images/avatars/avatar-3.png"
+              alt="avatar of men"
+              width="98"
+              height="98"
+            />
+            <p>I can help marketing strategy</p>
+          </li>
+          <button type="button">Contact our expert</button>
+        </ul>
+      </section>
+
+      <!-- section News feed -->
+      <section>
+        <h2>Contents Strategies</h2>
+        <p>
+          We focus on ergonomics and meeting you where you work. It's only a
+          keystroke away.
+        </p>
+        <ul>
+          <li>
+            <img
+              src="./images/photo/photo/image.png"
+              alt="the person writes"
+              width="350"
+              height="185"
+            />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Increasing Prosperity With Positive Thinking</h3>
+          </li>
+          <li>
+            <img
+              src="images/photo/photo/Bitmap-1.png"
+              alt="people and big windows"
+              width="350"
+              height="189"
+            />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Motivation Is The First Step To Success</h3>
+          </li>
+          <li>
+            <img
+              src="images/photo/photo/Bitmap.png"
+              alt="sky and skyscrapers"
+              width="350"
+              height="186"
+            />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Success Steps For Your Personal Or Business</h3>
+          </li>
+        </ul>
+      </section>
+
+      <!-- section Pricing -->
+      <section>
+        <h2>Price Table</h2>
+        <p>We offer competitive price</p>
+        <ul>
+          <li>
+            <h3>Free</h3>
+            <p>Brief price description</p>
+            <h4>0</h4>
+            <p>$</p>
+            <p>Per / month</p>
+            <ul>
+              <li>Only 2 Operators</li>
+              <li>Notifications</li>
+              <li>Landing Pages</li>
+            </ul>
+            <button>Order Now</button>
+          </li>
+          <li>
+            <h3>Standard</h3>
+            <p>Brief price description</p>
+            <h4>5</h4>
+            <p>$</p>
+            <p>Per / month</p>
+            <ul>
+              <li>5+ Operators</li>
+              <li>Notifications</li>
+              <li>Landing Pages</li>
+            </ul>
+            <button>Order Now</button>
+          </li>
+          <li>
+            <h3>Premium</h3>
+            <p>Brief price description</p>
+            <h4>10</h4>
+            <p>$</p>
+            <p>Per / month</p>
+            <ul>
+              <li>5+ Operators</li>
+              <li>Notifications</li>
+              <li>Landing Pages</li>
+            </ul>
+            <button>Order Now</button>
+          </li>
+        </ul>
+      </section>
       <section></section>
       <section></section>
     </main>
