--- a/index.html
+++ b/index.html
@@ -294,9 +294,81 @@
           </li>
         </ul>
       </section>
-      <section></section>
-      <section></section>
+
+      <!-- section Clients Say -->
+      <section>
+        <h2>What Clients Say</h2>
+        <p>
+          Problems trying to resolve the conflict between the two major realms
+          of Classical physics: Newtonian mechanics
+        </p>
+        <ul>
+          <li>
+            <img src="./images/stars.png" alt="Stars" />
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal. Product helps you see how many more days you
+              need to work to reach your financial goal. Product helps you see
+              how many more days you need to work to reach your financial goal.
+            </p>
+            <img src="./images/ellipse/Ellipse 2.png" alt="small-avatar" />
+            <h3>Wahid Ari</h3>
+            <p>Designer</p>
+          </li>
+          <li>
+            <img src="./images/stars.png" alt="Stars" />
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal. Product helps you see how many more days you
+              need to work to reach your financial goal. Product helps you see
+              how many more days you need to work to reach your financial goal.
+            </p>
+            <img src="./images/ellipse/Ellipse 2-1.png" alt="small-avatar" />
+            <h3>Wahid Ari</h3>
+            <p>Designer</p>
+          </li>
+          <li>
+            <img src="./images/stars.png" alt="Stars" />
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal. Product helps you see how many more days you
+              need to work to reach your financial goal. Product helps you see
+              how many more days you need to work to reach your financial goal.
+            </p>
+            <img src="./images/ellipse/Ellipse 2-2.png" alt="small-avatar" />
+            <h3>Wahid Ari</h3>
+            <p>Designer</p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- section Join 100 -->
+      <section>
+        <h2>Join 100 Compannies who boost their business with Product</h2>
+        <button>Get This</button>
+        <img src="./images/pictures/screen.png" alt="screen" />
+      </section>
     </main>
-    <footer></footer>
+
+    <!-- footer -->
+    <footer>
+      <a href="./index.html"
+        ><img src="./images/pictures/logo.png" alt="logo" />Product</a
+      >
+
+      <h3>Resource</h3>
+      <ul>
+        <li><p>About Us</p></li>
+        <li><p>Blog</p></li>
+        <li><p>Contact</p></li>
+        <li><p>FAQ</p></li>
+      </ul>
+      <h3>Legal Stuff</h3>
+      <ul>
+        <li>Disclaimer</li>
+        <li>Financing</li>
+        <li>Privacy Policy</li>
+      </ul>
+    </footer>
   </body>
 </html>
