--- a/index.html
+++ b/index.html
@@ -3,37 +3,62 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html"
-          ><img src="./images/pictures/logo.png" alt="logo" />Product</a
-        >
-        <ul>
-          <li><a href="./index.html">Product</a></li>
-          <li><a href="./pricises.html">Pricing</a></li>
-          <li><a href="./customers.html">Customers</a></li>
-          <li><a href="">Resources</a></li>
+    <header class="header">
+      <!-- region hero -->
+      <div class="container header-container">
+        <nav class="navigation">
+          <a href="./index.html" class="header-logo"
+            ><img src="./images/pictures/logo.png" alt="logo" />Product</a
+          >
+          <ul class="nav-list">
+            <li class="nav-list-item">
+              <a class="nav-item-link active" href="./index.html">Product</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-item-link" href="./pricises.html">Pricing</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-item-link" href="./customers.html">Customers</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-item-link" href="">Resources</a>
+            </li>
+          </ul>
+        </nav>
+
+        <ul class="list-btn">
+          <li><button type="button" class="list-btn-sign">Sign In</button></li>
+          <li>
+            <button type="button" class="list-btn-sign second">Sign Up</button>
+          </li>
         </ul>
-      </nav>
-      <ul>
-        <li><button type="button">Sign In</button></li>
-        <li><button type="button">Sign Up</button></li>
-      </ul>
+      </div>
     </header>
     <main>
       <!-- section hero-->
-      <section>
-        <h1>Work at the speed of thought</h1>
-        <p>
+      <section class="section-hero">
+        <h1 class="hero-title">Work at the speed of thought</h1>
+        <p class="hero-text">
           Tools, tutorials, design and innovation experts, all in one place! The
           most intuitive way to imagine your next user experience.
         </p>
-        <ul>
-          <li><button type="button">Get started</button></li>
-          <li><button type="button">Watch the Video</button></li>
+        <ul class="hero-list">
+          <li class="hero-list-item">
+            <button type="button" class="hero-list-btn">Get started</button>
+          </li>
+          <li class="hero-list-item">
+            <button type="button" class="hero-list-btn">Watch the Video</button>
+          </li>
         </ul>
         <img
           src="./images/pictures/hero-img.png"
@@ -44,47 +69,57 @@
       </section>
 
       <!-- section feature-->
-      <section>
-        <h2>Product was Built Specifically for You</h2>
-        <ul>
-          <li>
-            <h3>First click tests</h3>
-            <p>While most people enjoy casino gambling,</p>
+      <section class="section-feature">
+        <h2 class="feature-title">Product was Built Specifically for You</h2>
+        <ul class="feature-list">
+          <li class="feature-list-item">
+            <h3 class="feature-list-subtitle">First click tests</h3>
+            <p class="feature-list-text">
+              While most people enjoy casino gambling,
+            </p>
           </li>
-          <li>
-            <h3>Design surveys</h3>
-            <p>Sports betting, lottery and bingo playing for the fun</p>
+          <li class="feature-list-item">
+            <h3 class="feature-list-subtitle">Design surveys</h3>
+            <p class="feature-list-text">
+              Sports betting, lottery and bingo playing for the fun
+            </p>
           </li>
-          <li>
-            <h3>Preference tests</h3>
-            <p>The Myspace page defines the individual.</p>
+          <li class="feature-list-item">
+            <h3 class="feature-list-subtitle">Preference tests</h3>
+            <p class="feature-list-text">
+              The Myspace page defines the individual.
+            </p>
           </li>
-          <li>
-            <h3>Five second tests</h3>
-            <p>Personal choices and the overall personality of the person.</p>
+          <li class="feature-list-item">
+            <h3 class="feature-list-subtitle">Five second tests</h3>
+            <p class="feature-list-text">
+              Personal choices and the overall personality of the person.
+            </p>
           </li>
         </ul>
-        <button type="button">SIGN UP NOW</button>
+        <button type="button" class="feature-btn">SIGN UP NOW</button>
       </section>
 
       <!-- section Business management -->
-      <section>
-        <h2>Effortless Validation for Management</h2>
-        <p>
+      <section class="section-business">
+        <h2 class="section-business-title">
+          Effortless Validation for Management
+        </h2>
+        <p class="section-business-text">
           The Myspace page defines the individual, his or her characteristics,
           traits, personal choices and the overall personality of the person.
         </p>
-        <ul>
+        <ul class="section-business-list">
           <li>
-            <h3>Accessory makers</h3>
-            <p>
+            <h3 class="section-business-subtitle">Accessory makers</h3>
+            <p class="section-business-text">
               While most people enjoy casino gambling, sports betting, lottery
               and bingo playing for the fun
             </p>
           </li>
           <li>
-            <h3>Alterationists</h3>
-            <p>
+            <h3 class="section-business-subtitle">Alterationists</h3>
+            <p class="section-business-text">
               If you are looking for a new way to promote your business that
               won’t cost you more money,
             </p>
@@ -99,53 +134,59 @@
       </section>
 
       <!-- section Support -->
-      <section>
+      <section class="section-support">
         <img
           src="./images/pictures/support-img.png"
           alt="laptop"
           width="540"
           height="500"
         />
-        <h2>Easier decision making for Customer Support</h2>
-        <p>
+        <h2 class="support-title">
+          Easier decision making for Customer Support
+        </h2>
+        <p class="support-text">
           The Myspace page defines the individual, his or her characteristics,
           traits, personal choices and the overall personality of the person.
         </p>
-        <ul>
-          <li>
-            <p>Never worry about overpaying for your energy again.</p>
+        <ul class="support-list">
+          <li class="support-list-item">
+            <p class="support-list-text">
+              Never worry about overpaying for your energy again.
+            </p>
           </li>
-          <li>
-            <p>
+          <li class="support-list-item">
+            <p class="support-list-text">
               We will only switch you to energy companies that we trust and will
               treat you right
             </p>
           </li>
-          <li>
-            <p>We track the markets daily and know where the savings are.</p>
+          <li class="support-list-item">
+            <p class="support-list-text">
+              We track the markets daily and know where the savings are.
+            </p>
           </li>
         </ul>
       </section>
 
       <!-- section Collaboration -->
-      <section>
-        <h2>Optimisation for Collaborative</h2>
-        <p>
+      <section class="section-collaboration">
+        <h2 class="collaboration-title">Optimisation for Collaborative</h2>
+        <p class="collaboration-text">
           Few would argue that, despite the advancements of feminism over the
           past three decades, women still face a double standard when it comes
           to their behavior.
         </p>
-        <ul>
-          <li>
-            <h3>Accessory makers</h3>
-            <p>
+        <ul class="collaboration-list">
+          <li class="collaboration-list-item">
+            <h3 class="collaboration-list-subtitle">Accessory makers</h3>
+            <p class="collaboration-list-text">
               While most people enjoy casino gambling, sports betting, lottery
               and bingo playing for the fun
             </p>
           </li>
-          <li>
-            <h3>Alterationists</h3>
-            <p>
+          <li class="collaboration-list-item">
+            <h3 class="collaboration-list-subtitle">Alterationists</h3>
+            <p class="collaboration-list-text">
               If you are looking for a new way to promote your business that
               won’t cost you more money,
             </p>
@@ -159,112 +200,132 @@
         />
       </section>
 
-      <!-- section Collaboration -->
-      <section>
-        <h2>Quick & Easy Process</h2>
-        <p>
+      <!-- section Quick & Easy -->
+      <section class="section-quickeasy">
+        <h2 class="section-quickeasy-title">Quick & Easy Process</h2>
+        <p class="section-quickeasy-text">
           Do you require some help for your project: Conception workshop,
           prototyping, marketing strategy, landing page, Ux/UI?
         </p>
-        <ul>
-          <li>
+        <ul class="section-quickeasy-list">
+          <li class="section-quickeasy-list-item">
             <img
               src="./images/avatars/avatar.png"
               alt="avatar of girl"
               width="98"
               height="98"
             />
-            <p>I can take care of your pitch</p>
+            <p class="section-quickeasy-list-text">
+              I can take care of your pitch
+            </p>
           </li>
-          <li>
+          <li class="section-quickeasy-list-item">
             <img
               src="./images/avatars/avatar-1.png"
               alt="avatar of women"
               width="98"
               height="98"
             />
-            <p>I can prototype your app</p>
+            <p class="section-quickeasy-list-text">I can prototype your app</p>
           </li>
-          <li>
+          <li class="section-quickeasy-list-item">
             <img
               src="./images/avatars/avatar-2.png"
               alt="avatar of boy"
               width="98"
               height="98"
             />
-            <p>I can take care of your pitch</p>
+            <p class="section-quickeasy-list-text">
+              I can take care of your pitch
+            </p>
           </li>
-          <li>
+          <li class="section-quickeasy-list-item">
             <img
               src="./images/avatars/avatar-3.png"
               alt="avatar of men"
               width="98"
               height="98"
             />
-            <p>I can help marketing strategy</p>
+            <p class="section-quickeasy-list-text">
+              I can help marketing strategy
+            </p>
           </li>
-          <button type="button">Contact our expert</button>
+          <button type="button" class="section-quickeasy-list-btm">
+            Contact our expert
+          </button>
         </ul>
       </section>
 
       <!-- section News feed -->
-      <section>
-        <h2>Contents Strategies</h2>
-        <p>
+      <section class="section-newsfeed">
+        <h2 class="section-newsfeed">Contents Strategies</h2>
+        <p class="section-newsfeed-text">
           We focus on ergonomics and meeting you where you work. It's only a
           keystroke away.
         </p>
-        <ul>
-          <li>
+        <ul class="section-newsfeed-list">
+          <li class="section-newsfeed-list-item">
             <img
               src="./images/photo/photo/image.png"
               alt="the person writes"
               width="350"
               height="185"
             />
-            <p>By Wahid Ari | 03 March 2019</p>
-            <h3>Increasing Prosperity With Positive Thinking</h3>
+            <p class="section-newsfeed-list-text">
+              By Wahid Ari | 03 March 2019
+            </p>
+            <h3 class="section-newsfeed-list-subtitle">
+              Increasing Prosperity With Positive Thinking
+            </h3>
           </li>
-          <li>
+          <li class="section-newsfeed-list-item">
             <img
               src="images/photo/photo/Bitmap-1.png"
               alt="people and big windows"
               width="350"
               height="189"
             />
-            <p>By Wahid Ari | 03 March 2019</p>
-            <h3>Motivation Is The First Step To Success</h3>
+            <p class="section-newsfeed-list-text">
+              By Wahid Ari | 03 March 2019
+            </p>
+            <h3 class="section-newsfeed-list-subtitle">
+              Motivation Is The First Step To Success
+            </h3>
           </li>
-          <li>
+          <li class="section-newsfeed-list-item">
             <img
               src="images/photo/photo/Bitmap.png"
               alt="sky and skyscrapers"
               width="350"
               height="186"
             />
-            <p>By Wahid Ari | 03 March 2019</p>
-            <h3>Success Steps For Your Personal Or Business</h3>
+            <p class="section-newsfeed-list-text">
+              By Wahid Ari | 03 March 2019
+            </p>
+            <h3 class="section-newsfeed-list-subtitle">
+              Success Steps For Your Personal Or Business
+            </h3>
           </li>
         </ul>
       </section>
 
       <!-- section Pricing -->
-      <section>
-        <h2>Price Table</h2>
-        <p>We offer competitive price</p>
-        <ul>
-          <li>
-            <h3>Free</h3>
-            <p>Brief price description</p>
-            <h4>0</h4>
-            <p>$</p>
-            <p>Per / month</p>
-            <ul>
-              <li>Only 2 Operators</li>
-              <li>Notifications</li>
-              <li>Landing Pages</li>
+      <section class="section-pricing">
+        <h2 class="pricing-title">Price Table</h2>
+        <p class="pricing-text">We offer competitive price</p>
+        <ul class="pricing-list">
+          <li class="pricing-list-item">
+            <h3 class="pricing-list-subtitle">Free</h3>
+            <p class="pricing-list-text">Brief price description</p>
+            <h4 class="pricing-list-subsubtitle">0</h4>
+            <p class="pricing-list-text-second">$</p>
+            <p class="pricing-list-text-third">Per / month</p>
+            <ul class="pricing-list-second">
+              <li class="pricing-list-second-item">Only 2 Operators</li>
+              <li class="pricing-list-second-item">Notifications</li>
+              <li class="pricing-list-second-item">Landing Pages</li>
             </ul>
-            <button>Order Now</button>
+            <button class="pricing-list-second-btm">Order Now</button>
           </li>
           <li>
             <h3>Standard</h3>
