--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&family=Montserrat:wght@100..900&family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
 
@@ -25,8 +25,8 @@
     <header class="page-header">
       <div class="container header-container">
         <nav class="navigation">
-          <a href="./index.html" class="logo header-logo"
-            ><img src="./images/pictures/logo.png" alt="logo" />Product</a
+          <a href="./index.html" class="header-logo"
+            ><img src="./images/pictures/logo.png" alt="logo" /> Product</a
           >
           <ul class="nav-list">
             <li class="nav-list-item">
@@ -69,7 +69,7 @@
               </li>
               <li class="hero-list-item">
                 <button type="button" class="hero-list-btn2">
-                  Watch the Video
+                  <img src="./images/triang.svg" alt="icon" />Watch the video
                 </button>
               </li>
             </ul>
@@ -90,24 +90,44 @@
           <h2 class="feature-title">Product was Built Specifically for You</h2>
           <ul class="feature-list">
             <li class="feature-list-item">
+              <div class="feature-box first">
+                <svg class="icon-feature" width="11" height="18">
+                  <use href="./images/icons.svg#point"></use>
+                </svg>
+              </div>
               <h3 class="feature-list-subtitle">First click tests</h3>
               <p class="feature-list-text">
                 While most people enjoy casino gambling,
               </p>
             </li>
             <li class="feature-list-item">
+              <div class="feature-box second2">
+                <svg class="icon-feature" width="18" height="18">
+                  <use href="./images/icons.svg#wive"></use>
+                </svg>
+              </div>
               <h3 class="feature-list-subtitle">Design surveys</h3>
               <p class="feature-list-text">
                 Sports betting, lottery and bingo playing for the fun
               </p>
             </li>
             <li class="feature-list-item">
+              <div class="feature-box third">
+                <svg class="icon-feature" width="16" height="18">
+                  <use href="./images/icons.svg#heart"></use>
+                </svg>
+              </div>
               <h3 class="feature-list-subtitle">Preference tests</h3>
               <p class="feature-list-text">
                 The Myspace page defines the individual.
               </p>
             </li>
             <li class="feature-list-item">
+              <div class="feature-box four">
+                <svg class="icon-feature" width="14" height="18">
+                  <use href="./images/icons.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="feature-list-subtitle">Five second tests</h3>
               <p class="feature-list-text">
                 Personal choices and the overall personality of the person.
@@ -367,50 +387,88 @@
       <!-- #endregion section News feed -->
 
       <!-- #region section Pricing -->
-      <section class="section-pricing">
-        <h2 class="pricing-title">Price Table</h2>
-        <p class="pricing-text">We offer competitive price</p>
-        <ul class="pricing-list">
-          <li class="pricing-list-item">
-            <h3 class="pricing-list-subtitle">Free</h3>
-            <p class="pricing-list-text">Brief price description</p>
-            <h4 class="pricing-list-subsubtitle">0</h4>
-            <p class="pricing-list-text-second">$</p>
-            <p class="pricing-list-text-third">Per / month</p>
-            <ul class="pricing-list-second">
-              <li class="pricing-list-second-item">Only 2 Operators</li>
-              <li class="pricing-list-second-item">Notifications</li>
-              <li class="pricing-list-second-item">Landing Pages</li>
-            </ul>
-            <button class="pricing-list-second-btm">Order Now</button>
-          </li>
-          <li class="pricing-list-item">
-            <h3 class="pricing-list-subtitle">Standard</h3>
-            <p class="pricing-list-text">Brief price description</p>
-            <h4 class="pricing-list-subsubtitle">5</h4>
-            <p class="pricing-list-text">$</p>
-            <p class="pricing-list-text">Per / month</p>
-            <ul class="pricing-list-second">
-              <li class="pricing-list-second-item">5+ Operators</li>
-              <li class="pricing-list-second-item">Notifications</li>
-              <li class="pricing-list-second-item">Landing Pages</li>
-            </ul>
-            <button class="pricing-list-second-btm">Order Now</button>
-          </li>
-          <li class="pricing-list-item">
-            <h3 class="pricing-list-subtitle">Premium</h3>
-            <p class="pricing-list-text">Brief price description</p>
-            <h4 class="pricing-list-subsubtitle">10</h4>
-            <p class="pricing-list-text">$</p>
-            <p class="pricing-list-text">Per / month</p>
-            <ul class="pricing-list-second">
-              <li class="pricing-list-second-item">5+ Operators</li>
-              <li class="pricing-list-second-item">Notifications</li>
-              <li class="pricing-list-second-item">Landing Pages</li>
-            </ul>
-            <button class="pricing-list-second-btm">Order Now</button>
-          </li>
-        </ul>
+      <section class="pricing">
+        <div class="container">
+          <h2 class="price-title">Price Table</h2>
+          <p class="price-title-descr">We offer competitive price</p>
+          <ul class="price-list">
+            <li class="price-item">
+              <h3 class="price-item-title">Free</h3>
+              <p class="price-item-title-descr">Brief price description</p>
+
+              <div class="priscing-wrap">
+                <h4 class="price-number">0</h4>
+                <div class="price-number-wrap">
+                  <p class="price-valute">$</p>
+                  <p class="price-period">Per / month</p>
+                </div>
+              </div>
+              <ul class="price-list-points">
+                <li class="price-points-item">
+                  <h5 class="item-operations">Only 2 Operators</h5>
+                </li>
+                <li class="price-points-item">
+                  <h5 class="item-notifications">Notifications</h5>
+                </li>
+                <li class="price-points-item">
+                  <h5 class="item-landing">Landing Pages</h5>
+                </li>
+              </ul>
+              <button type="button" class="price-btn">Order Now</button>
+            </li>
+            <li class="price-item">
+              <h3 class="price-item-title standart">Standard</h3>
+              <p class="price-item-title-descr standart">
+                Brief price description
+              </p>
+              <div class="priscing-wrap">
+                <h4 class="price-number standart">5</h4>
+                <div class="price-number-wrap">
+                  <p class="price-valute standart">$</p>
+                  <p class="price-period standart">Per / month</p>
+                </div>
+              </div>
+
+              <ul class="price-list-points">
+                <li class="price-points-item">
+                  <h5 class="item-operations standart">5+ Operators</h5>
+                </li>
+                <li class="price-points-item">
+                  <h5 class="item-notifications standart">Notifications</h5>
+                </li>
+                <li class="price-points-item">
+                  <h5 class="item-landing standart">Landing Pages</h5>
+                </li>
+              </ul>
+              <button type="button" class="price-btn standart-btn">
+                Order Now
+              </button>
+            </li>
+            <li class="price-item">
+              <h3 class="price-item-title">Premium</h3>
+              <p class="price-item-title-descr">Brief price description</p>
+              <div class="priscing-wrap">
+                <h4 class="price-number">10</h4>
+                <div class="price-number-wrap">
+                  <p class="price-valute">$</p>
+                  <p class="price-period">Per / month</p>
+                </div>
+              </div>
+              <ul class="price-list-points">
+                <li class="price-points-item">
+                  <h5 class="item-operations">10+ Operators</h5>
+                </li>
+                <li class="price-points-item">
+                  <h5 class="item-notifications">Notifications</h5>
+                </li>
+                <li class="price-points-item">
+                  <h5 class="item-landing">Landing Pages</h5>
+                </li>
+              </ul>
+              <button type="button" class="price-btn">Order Now</button>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- #endregion section Pricing -->
 
